--- a/police-shootings.ipynb
+++ b/police-shootings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'c:\\\\Users\\\\thoma\\\\OneDrive\\\\Documents\\\\data_science\\\\Projects\\\\data-police-shootings'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,13 +25,13 @@
     "import seaborn as sns\n",
     "import matplotlib as plt\n",
     "pio.templates.default = \"plotly_white\"\n",
-    "px.set_mapbox_access_token('pk.eyJ1IjoidG1jYXVsZXkiLCJhIjoiY2wza2tncmZzMjJtcDNxcDZ5ZDBkMGNmciJ9.QXYubtefO-LDuz1XmcQ6eQ')\n",
+    "px.set_mapbox_access_token(open('C:/Users/thoma/OneDrive/Documents/data_science/mapbox-token-tpm.txt').read())\n",
     "%pwd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_4360\\595545728.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\thoma\\AppData\\Local\\Temp\\ipykernel_15196\\595545728.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -665,7 +665,7 @@
        "7940                       False        False        141  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
